--- a/christina/templates/index.html
+++ b/christina/templates/index.html
@@ -4,26 +4,39 @@
   <meta charset="UTF-8">
   <title>Air bnb</title>
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css">
 
-  <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+ <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css"> -->
+
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+  integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+  crossorigin=""/>
+
+<link rel="stylesheet" type="text/css" href="static/css/style.css">
+
 </head>
 <body>
 <h1>Map goes here</h1>
-  <!-- The div that holds our map -->
+
   <div id="map"></div>
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
 
 
-    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 
-  <!-- API Key -->
-   <script type="text/javascript" src="/js/config.js"></script>
-   <!-- Our JavaScript -->
-  <script type="text/javascript" src="/js/logic.js"></script> 
+  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+  crossorigin=""></script>
+<!--   
+    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script> -->
+
+    <script type="text/javascript" src="/static/config.js"></script>
+
+    <script type="text/javascript" src="/static/logic.js"></script> 
+
+
 
 </body>
 
