--- a/christina/templates/index.html
+++ b/christina/templates/index.html
@@ -16,10 +16,10 @@
 
 </head>
 <body>
-<h1>Map goes here</h1>
+
 
   <div id="map"></div>
-
+  <div id="pie"></div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
@@ -34,7 +34,9 @@
 
     <script type="text/javascript" src="/static/config.js"></script>
 
-    <script type="text/javascript" src="/static/logic.js"></script> 
+    <script type="text/javascript" src="/static/logic2.js"></script> 
+
+    <script type="text/javascript" src="/static/plot.js"></script> 
 
 
 
