--- a/christina/templates/index.html
+++ b/christina/templates/index.html
@@ -16,7 +16,17 @@
 
 </head>
 <body>
+<!-- 
+<h1>Airbnb</h1>
+<h3>Use the choices to the right to find your perfect Airbnb at the price that you want it!</h3>
+<h3>Click on the circle to see details about the listing.</h3> -->
 
+<div class="jumbotron jumbotron-fluid">
+  <h1 class="display-4">Visit San Francisco!</h1>
+
+</div>
+<p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
+<p>Click on the circle to see details about the listing.</p>
 
   <div id="map"></div>
   <div id="pie"></div>
@@ -36,7 +46,7 @@
 
     <script type="text/javascript" src="/static/logic2.js"></script> 
 
-    <script type="text/javascript" src="/static/plot.js"></script> 
+    <!-- <script type="text/javascript" src="/static/plot.js"></script>  -->
 
 
 
