--- a/christina/static/css/style.css
+++ b/christina/static/css/style.css
@@ -1,7 +1,31 @@
 html,
 body,
 #map {
-  height: 100%;
-  padding: 0;
-  margin: 0;
+  height: 90%;
+  padding: 100;
+  margin: 800;
+}
+
+h1{
+text-align: right;
+font-family: Roboto, "Helvetica Neue", sans-serif;
+color: black;
+font-size: 50px;
+padding:70px;
+margin-right: 130px;
+}
+
+p{
+  text-align: center;
+  font-size: 20px;
+  color: black
+  }
+
+.jumbotron{
+  background-color:white;
+  background-image: url(sfbridge2.jpg);
+  background-position: 30% 30%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
 }
