--- a/julia/templates/index.html
+++ b/julia/templates/index.html
@@ -16,28 +16,41 @@
 
 </head>
 <body>
-<h1>Map goes here</h1>
-
-  <div id="map"></div>
-
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
-
-
-
-  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-  crossorigin=""></script>
-<!--   
-    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script> -->
-
-    <script type="text/javascript" src="../static/config.js"></script>
-
-    <script type="text/javascript" src="../static/logic2.js"></script> 
-
-
-
-</body>
-
-</html>
+  <!-- 
+  <h1>Airbnb</h1>
+  <h3>Use the choices to the right to find your perfect Airbnb at the price that you want it!</h3>
+  <h3>Click on the circle to see details about the listing.</h3> -->
+  
+  <div class="jumbotron jumbotron-fluid">
+    <h1 class="display-4">Visit San Francisco!</h1>
+  
+  </div>
+  <p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
+  <p>Click on the circle to see details about the listing.</p>
+  
+    <div id="map"></div>
+    <div id="pie"></div>
+  
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
+  
+  
+  
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+    crossorigin=""></script>
+  <!--   
+      <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script> -->
+  
+      <script type="text/javascript" src="../static/config.js"></script>
+  
+      <script type="text/javascript" src="../static/logic3.js"></script> 
+  
+      <!-- <script type="text/javascript" src="/static/plot.js"></script>  -->
+  
+  
+  
+  </body>
+  
+  </html>
+  
