add plotly cdn, #plot styling, object for count of listings per neighborhood, append barchart to dashboard

--- a/julia/static/css/style.css
+++ b/julia/static/css/style.css
@@ -3,7 +3,15 @@ body,
 #map {
   height: 90%;
   padding: 100;
-  margin: 800;
+  margin-left: 800;
+  margin-right: 800;
+}
+
+#plot {
+  height: 90%;
+  padding: 100;
+  margin-left: 800;
+  margin-right: 800;
 }
 
 h1{
