--- a/julia/templates/index.html
+++ b/julia/templates/index.html
@@ -13,7 +13,7 @@
   crossorigin=""/>
 
 <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
   <!-- 
@@ -27,9 +27,12 @@
   </div>
   <p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
   <p>Click on the circle to see details about the listing.</p>
-  
+
     <div id="map"></div>
-    <div id="pie"></div>
+
+    <div id="plot"></div>
+
+
   
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
