--- a/julia/templates/index.html
+++ b/julia/templates/index.html
@@ -25,18 +25,14 @@
     <h1 class="display-4">Visit San Francisco!</h1>
   
   </div>
-  <p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
-  <p>Click on the circle to see details about the listing.</p>
+  <!-- <p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
+  <p>Click on the circle to see details about the listing.</p> -->
 
     <div id="map"></div>
 
     <div id="plot"></div>
 
-
-  
-  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
-  
   
   
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
@@ -48,6 +44,8 @@
       <script type="text/javascript" src="../static/config.js"></script>
   
       <script type="text/javascript" src="../static/logic3.js"></script> 
+
+      <script type="text/javascript" src="../static/geojson.js"></script> 
   
       <!-- <script type="text/javascript" src="/static/plot.js"></script>  -->
   
