--- a/christina/static/css/style.css
+++ b/christina/static/css/style.css
@@ -1,18 +1,44 @@
+body{
+  background-color: wheat
+}
+
+/* .svg-container{
+  padding:100;
+  margin-top: 100
+} */
+
 html,
 body,
 #map {
   height: 90%;
   padding: 100;
-  margin: 800;
+  margin-left: 800;
+  margin-right: 800;
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto; 
+  margin-right:auto;
 }
 
+#plot {
+  height: 90%;
+  padding: 100;
+  margin-left: 800;
+  margin-right: 800;
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto; 
+  margin-right:auto;
+}
 h1{
-text-align: right;
+text-align: center;
 font-family: Roboto, "Helvetica Neue", sans-serif;
 color: black;
 font-size: 50px;
-padding:70px;
-margin-right: 130px;
+padding:15px;
+/* margin-right: 130px; */
 }
 
 p{
@@ -23,9 +49,41 @@ p{
 
 .jumbotron{
   background-color:white;
-  background-image: url(sfbridge2.jpg);
+  background-image: url(skyline.jpg);
   background-position: 30% 30%;
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
+  position: relative;
+  height: 50%;
+  padding: 100;
+  margin-left: 800;
+  margin-right: 800;
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto; 
+  margin-right:auto; 
+
 }
+
+#particle {
+  background-color:rgb(17, 0, 94);
+  position: fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index:0; 
+}
+
+/* #particle {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+} */
+
+/* #overlay {
+  position: absolute;
+} */
