--- a/christina/templates/index.html
+++ b/christina/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Air bnb</title>
+  <title>San Francisco</title>
 
 
  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css"> -->
@@ -12,44 +12,55 @@
   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
   crossorigin=""/>
 
-<link rel="stylesheet" type="text/css" href="static/css/style.css">
-
+<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-<!-- 
-<h1>Airbnb</h1>
-<h3>Use the choices to the right to find your perfect Airbnb at the price that you want it!</h3>
-<h3>Click on the circle to see details about the listing.</h3> -->
+  <!-- 
+  <h1>Airbnb</h1>
+  <h3>Use the choices to the right to find your perfect Airbnb at the price that you want it!</h3>
+  <h3>Click on the circle to see details about the listing.</h3> -->
+  <div id="particle"></div>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-<div class="jumbotron jumbotron-fluid">
-  <h1 class="display-4">Visit San Francisco!</h1>
+  <div class="jumbotron jumbotron-fluid">
+    <h1 class="display-4">San Francisco Airbnb</h1>
+  
+  </div>
+  
+  
+  <!-- <p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
+  <p>Click on the circle to see details about the listing.</p> -->
 
-</div>
-<p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
-<p>Click on the circle to see details about the listing.</p>
-
-  <div id="map"></div>
-  <div id="pie"></div>
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
-
-
-
-  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-  crossorigin=""></script>
-<!--   
-    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script> -->
-
-    <script type="text/javascript" src="/static/config.js"></script>
-
-    <script type="text/javascript" src="/static/logic2.js"></script> 
-
-    <!-- <script type="text/javascript" src="/static/plot.js"></script>  -->
+    <div id="map"></div>
+    
+    
+    <div id="plot"></div>
 
 
 
-</body>
 
-</html>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
+  
+  
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+    crossorigin=""></script>
+  <!--   
+      <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script> -->
+  
+      <script type="text/javascript" src="../static/config.js"></script>
+  
+      <script type="text/javascript" src="../static/logic3.js"></script> 
+
+      <script type="text/javascript" src="../static/geojson.js"></script> 
+  
+      <!-- <script type="text/javascript" src="/static/plot.js"></script>  -->
+  
+  
+  
+  </body>
+  
+  </html>
+  
