--- a/julia/static/css/style.css
+++ b/julia/static/css/style.css
@@ -1,39 +1,82 @@
-html,
-body,
-#map {
+
+ html,
+ body,
+ #map {
   height: 90%;
   padding: 100;
   margin-left: 800;
   margin-right: 800;
-}
-
-#plot {
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
+ }
+ 
+ #plot {
   height: 90%;
   padding: 100;
   margin-left: 800;
   margin-right: 800;
-}
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
+ }
+ #plot2 {
+  height: 90%;
+  padding: 100;
+  margin-left: 800;
+  margin-right: 800;
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
+ }
 
-h1{
-text-align: right;
-font-family: Roboto, "Helvetica Neue", sans-serif;
-color: black;
-font-size: 50px;
-padding:70px;
-margin-right: 130px;
-}
-
-p{
+ h1{
+ text-align: right;
+ font-family: Roboto, "Helvetica Neue", sans-serif;
+ color: black;
+ font-size: 50px;
+ padding:70px;
+ margin-right: 130px;
+ }
+ 
+ p{
   text-align: center;
   font-size: 20px;
   color: black
   }
-
-.jumbotron{
+ 
+ .jumbotron{
   background-color:white;
   background-image: url(sfbridge2.jpg);
   background-position: 30% 30%;
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-}
+  position: relative;
+  height: 50%;
+  padding: 100;
+  margin-left: 800;
+  margin-right: 800;
+  margin-bottom: 800;
+  margin-top: 800;
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
+ 
+ }
+ 
+ #particle {
+  background-color:rgb(17, 0, 94);
+  position: fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index:0;
+ }
