--- a/julia/templates/index.html
+++ b/julia/templates/index.html
@@ -20,7 +20,8 @@
   <h1>Airbnb</h1>
   <h3>Use the choices to the right to find your perfect Airbnb at the price that you want it!</h3>
   <h3>Click on the circle to see details about the listing.</h3> -->
-  
+  <div id="particle"></div>
+ <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <div class="jumbotron jumbotron-fluid">
     <h1 class="display-4">Visit San Francisco!</h1>
   
@@ -29,8 +30,12 @@
   <p>Click on the circle to see details about the listing.</p> -->
 
     <div id="map"></div>
-
+<br>
     <div id="plot"></div>
+<br>
+    <div id="plot2"></div>
+<br>
+<br>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
   
