--- a/christina/templates/index.html
+++ b/christina/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>San Francisco</title>
+  <title>Air bnb</title>
 
 
  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css"> -->
@@ -21,25 +21,23 @@
   <h3>Use the choices to the right to find your perfect Airbnb at the price that you want it!</h3>
   <h3>Click on the circle to see details about the listing.</h3> -->
   <div id="particle"></div>
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
+ <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <div class="jumbotron jumbotron-fluid">
     <h1 class="display-4">San Francisco Airbnb</h1>
   
   </div>
-  
-  
   <!-- <p class="lead">Use the choices to the right to find your perfect Airbnb at the price that you want it!</p>
   <p>Click on the circle to see details about the listing.</p> -->
 
     <div id="map"></div>
-    
-    
+<br>
     <div id="plot"></div>
-
-
-
-
+<br>
+    <div id="plot2"></div>
+<br>
+    <div id="plot3"></div>
+<br>
+<br>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
   
